fix: remove DIRAC setup

--- a/diracx-cli/tests/legacy/cs_sync/integration_test.cfg
+++ b/diracx-cli/tests/legacy/cs_sync/integration_test.cfg
@@ -9,21 +9,18 @@ DIRAC
   }
   Setups
   {
-    dirac-JenkinsSetup
-    {
-      Accounting = Production
-      Configuration = Production
-      DataManagement = Production
-      Framework = Production
-      Monitoring = Production
-      RequestManagement = Production
-      ResourceStatus = Production
-      StorageManagement = Production
-      Production = Production
-      Transformation = Production
-      WorkloadManagement = Production
-      Tornado = Production
-    }
+    Accounting = Production
+    Configuration = Production
+    DataManagement = Production
+    Framework = Production
+    Monitoring = Production
+    RequestManagement = Production
+    ResourceStatus = Production
+    StorageManagement = Production
+    Production = Production
+    Transformation = Production
+    WorkloadManagement = Production
+    Tornado = Production
   }
 }
 DiracX
@@ -1195,8 +1192,7 @@ Systems
           Backend = local
           MaxSandboxSizeMiB = 10
           SandboxPrefix = Sandbox
-          #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
-          BasePath = dirac-JenkinsSetup/sandboxes
+          BasePath = sandboxes
           DelayedExternalDeletion = True
           Authorization
           {
@@ -1206,7 +1202,6 @@ Systems
               Default = authenticated
             }
           }
-          #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
           LogLevel = DEBUG
         }
         TornadoWMSAdministrator
@@ -1249,7 +1244,7 @@ Systems
         SandboxStore
         {
           #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
-          BasePath = dirac-JenkinsSetup/sandboxes
+          BasePath = sandboxes
           #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
           LogLevel = DEBUG
         }
@@ -1749,7 +1744,7 @@ Resources
         #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
         Access = remote
         #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
-        Path = dirac-JenkinsSetup/sandboxes
+        Path = sandboxes
       }
     }
     #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
