--- a/extensions/gubbins/pyproject.toml
+++ b/extensions/gubbins/pyproject.toml
@@ -14,9 +14,9 @@ classifiers = [
 ]
 dependencies = [
     #    "gubbins-api",
-    #    "gubbins-cli",
-    #    "gubbins-client",
-    #    "gubbins-core",
+    "gubbins-cli",
+    "gubbins-client",
+    "gubbins-core",
 ]
 dynamic = ["version"]
 
@@ -63,7 +63,6 @@ ignore = [
 ]
 
 
-
 [tool.ruff.lint.flake8-bugbear]
 # Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
 extend-immutable-calls = [
@@ -76,20 +75,20 @@ extend-immutable-calls = [
 
 [tool.mypy]
 files = [
-#    "gubbins-api/src/**/*.py",
+    #    "gubbins-api/src/**/*.py",
     "gubbins-cli/src/**/*.py",
     "gubbins-client/src/**/_patch.py",
     "gubbins-client/src/gubbins/client/patches/**/*.py",
-#    "gubbins-core/src/**/*.py",
+    #    "gubbins-core/src/**/*.py",
     "gubbins-db/src/**/*.py",
     "gubbins-logic/src/**/*.py",
     "gubbins-routers/src/**/*.py",
 ]
 mypy_path = [
-#    "$MYPY_CONFIG_FILE_DIR/gubbins-api/src",
+    #    "$MYPY_CONFIG_FILE_DIR/gubbins-api/src",
     "$MYPY_CONFIG_FILE_DIR/gubbins-cli/src",
     "$MYPY_CONFIG_FILE_DIR/gubbins-client/src",
-#    "$MYPY_CONFIG_FILE_DIR/gubbins-core/src",
+    #    "$MYPY_CONFIG_FILE_DIR/gubbins-core/src",
     "$MYPY_CONFIG_FILE_DIR/gubbins-db/src",
     "$MYPY_CONFIG_FILE_DIR/gubbins-logic/src",
     "$MYPY_CONFIG_FILE_DIR/gubbins-routers/src",
