--- a/diracx-logic/pyproject.toml
+++ b/diracx-logic/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "cachetools",
     "dirac",
     "diracx-core",
+    "diracx-db",
     "pydantic >=2.10",
 ]
 dynamic = ["version"]
