Install types for dev

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
--e ./[testing]
--e ./diracx-core/[testing]
--e ./diracx-api/[testing]
--e ./diracx-cli/[testing]
--e ./diracx-client/[testing]
--e ./diracx-routers/[testing]
--e ./diracx-db/[testing]
--e ./diracx-testing/[testing]
--e ./diracx-logic/[testing]
+-e ./[testing,types]
+-e ./diracx-core/[testing,types]
+-e ./diracx-api/[testing,types]
+-e ./diracx-cli/[testing,types]
+-e ./diracx-client/[testing,types]
+-e ./diracx-routers/[testing,types]
+-e ./diracx-db/[testing,types]
+-e ./diracx-testing/[testing,types]
+-e ./diracx-logic/[testing,types]
