--- a/diracx-core/pyproject.toml
+++ b/diracx-core/pyproject.toml
@@ -42,6 +42,7 @@ types = [
 [project.entry-points."diracx"]
 properties_module = "diracx.core.properties"
 config = "diracx.core.config.schema:Config"
+extension = "diracx"
 
 [tool.setuptools.packages.find]
 where = ["src"]
