--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -72,5 +72,5 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
-          name: serivce-logs
+          name: service-logs-${{ github.job }}
           path: /tmp/service-logs/
