--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ exclude = [
 
 [tool.ruff.lint]
 select = [
-    "E",   # pycodestyle errrors
+    "E",   # pycodestyle errors
     "F",   # pyflakes
     "B",   # flake8-bugbear
     "I",   # isort
@@ -141,6 +141,7 @@ ignore_missing_imports = true
 [tool.pytest.ini_options]
 minversion = "8"
 log_cli_level = "INFO"
+xfail_strict = true
 testpaths = [
     "diracx-api/tests",
     "diracx-cli/tests",
