feat: apply suggested mypy configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,8 @@ profile = "black"
 
 
 [tool.mypy]
+strict = true
+warn_unreachable = true
 files = [
     "diracx-api/src/**/*.py",
     "diracx-cli/src/**/*.py",
@@ -124,7 +126,7 @@ allow_redefinition = true
 explicit_package_bases = true
 # disallow_untyped_defs = true
 # strict = true
-enable_error_code = ["import", "attr-defined"]
+enable_error_code = ["import", "attr-defined", "ignore-without-code", "redundant-expr", "truthy-bool"]
 
 [[tool.mypy.overrides]]
 module = 'DIRAC.*'
