--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,32 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 default_language_version:
-  python: python3
+    python: python3
 
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+-   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-added-large-files
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: 'v0.11.6'
     hooks:
-      - id: ruff
+    -   id: ruff
         args: ["--fix", "--show-fixes"]
 
-  - repo: https://github.com/psf/black-pre-commit-mirror
+-   repo: https://github.com/psf/black-pre-commit-mirror
     rev: 25.1.0
     hooks:
-      - id: black
+    -   id: black
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
+-   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.15.0
     hooks:
-      - id: mypy
+    -   id: mypy
         additional_dependencies:
           - pydantic
           - sqlalchemy
@@ -37,30 +37,42 @@ repos:
           - boto3-stubs[essential]
         exclude: ^(diracx-client/src/diracx/client/_generated|diracx-[a-z]+/tests/|diracx-testing/|build|extensions/gubbins/gubbins-client/src/gubbins/client/_generated)
 
-  - repo: https://github.com/codespell-project/codespell
+-   repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
-    - id: codespell
+    -   id: codespell
 
-  - repo: https://github.com/executablebooks/mdformat
+-   repo: https://github.com/executablebooks/mdformat
     rev: 0.7.22  # Use the ref you want to point at
     hooks:
-    - id: mdformat
+    -   id: mdformat
       # Optionally add plugins
-      additional_dependencies:
-      - mdformat-gfm
-      - mdformat-black
+        additional_dependencies:
+        -   mdformat-gfm
+        -   mdformat-black
 
-  - repo: https://github.com/pre-commit/pygrep-hooks
+-   repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0  # Use the ref you want to point at
     hooks:
-    - id: python-use-type-annotations
-    - id: python-check-blanket-noqa
-    - id: python-check-blanket-type-ignore
-    - id: python-no-eval
-    - id: python-no-log-warn
-    - id: rst-backticks
-    - id: rst-directive-colons
-    - id: rst-inline-touching-normal
-    - id: text-unicode-replacement-char
+    -   id: python-use-type-annotations
+    -   id: python-check-blanket-noqa
+    -   id: python-check-blanket-type-ignore
+    -   id: python-no-eval
+    -   id: python-no-log-warn
+    -   id: rst-backticks
+    -   id: rst-directive-colons
+    -   id: rst-inline-touching-normal
+    -   id: text-unicode-replacement-char
     # ...
+
+-   repo: https://github.com/adamchainz/blacken-docs
+    rev: ""  # replace with latest tag on GitHub
+    hooks:
+    -   id: blacken-docs
+        additional_dependencies:
+        -   black==25.1.0 # use sync-pre-commit-deps below??
+
+-   repo: https://github.com/pre-commit/sync-pre-commit-deps
+    rev: v0.0.3
+    hooks:
+    -   id: sync-pre-commit-deps
