--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,7 +66,7 @@ repos:
     # ...
 
 -   repo: https://github.com/adamchainz/blacken-docs
-    rev: ""  # replace with latest tag on GitHub
+    rev: "v1.12.1"  # replace with latest tag on GitHub
     hooks:
     -   id: blacken-docs
         additional_dependencies:
