feat: set mypy strict to false

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ profile = "black"
 
 
 [tool.mypy]
-strict = true
+strict = false
 warn_unreachable = true
 files = [
     "diracx-api/src/**/*.py",
