--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -9,7 +9,6 @@ on:
     branches:
       - main
 
-
 defaults:
   run:
     shell: bash -el {0}
@@ -49,8 +48,9 @@ jobs:
             python-gfal2
             mypy
             pip
+            tzlocal >5
           init-shell: bash
-          post-cleanup: 'all'
+          post-cleanup: "all"
       - name: Set up environment
         run: |
           pip install pytest-github-actions-annotate-failures
@@ -68,7 +68,6 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v5.4.0
 
-
   build-wheels:
     name: Build wheels
     runs-on: "ubuntu-latest"
@@ -82,7 +81,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Installing dependencies
         run: |
           python -m pip install \
@@ -111,7 +110,7 @@ jobs:
             echo "Building $pkg_dir"
             python -m build --outdir $PWD/dist $pkg_dir
           done
-      - name: 'Upload Artifact'
+      - name: "Upload Artifact"
         uses: actions/upload-artifact@v4
         with:
           name: gubbins-whl
@@ -121,7 +120,7 @@ jobs:
   # Build to docker image with the code in it
   build-image:
     needs: build-wheels
-    timeout-minutes:  30
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -131,7 +130,7 @@ jobs:
       - name: Download gubbins wheels
         uses: actions/download-artifact@v4
         with:
-            name: gubbins-whl
+          name: gubbins-whl
       - name: "Find wheels"
         id: find_wheel
         run: |
@@ -162,7 +161,6 @@ jobs:
           name: gubbins-services-img
           path: /tmp/gubbins_services_image.tar
 
-
   pytest-integration:
     needs: build-image
     runs-on: ubuntu-latest
@@ -182,7 +180,7 @@ jobs:
         with:
           environment-file: environment.yml
           init-shell: bash
-          post-cleanup: 'all'
+          post-cleanup: "all"
       - name: Set up environment
         run: |
           pip install pytest-github-actions-annotate-failures
@@ -270,7 +268,7 @@ jobs:
         with:
           environment-file: environment.yml
           init-shell: bash
-          post-cleanup: 'all'
+          post-cleanup: "all"
       - name: Set up environment
         run: |
           micromamba install -c conda-forge nodejs pre-commit
