SmarterDateTime has a nicer ring to it, maybe?
tzlocal w/o version spec

--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -48,7 +48,7 @@ jobs:
             python-gfal2
             mypy
             pip
-            tzlocal >5
+            tzlocal
           init-shell: bash
           post-cleanup: "all"
       - name: Set up environment
