Restored files that didn't need touching

--- a/diracx-db/pyproject.toml
+++ b/diracx-db/pyproject.toml
@@ -4,7 +4,7 @@ description = "TODO"
 readme = "README.md"
 requires-python = ">=3.11"
 keywords = []
-license = { text = "GPL-3.0-only" }
+license = {text = "GPL-3.0-only"}
 classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
@@ -21,7 +21,9 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-testing = ["diracx-testing"]
+testing = [
+    "diracx-testing",
+]
 
 [project.entry-points."diracx.dbs.sql"]
 AuthDB = "diracx.db.sql:AuthDB"
@@ -49,10 +51,8 @@ root = ".."
 testpaths = ["tests"]
 addopts = [
     "-v",
-    "--cov=diracx.db",
-    "--cov-report=term-missing",
-    "-pdiracx.testing",
-    "-pdiracx.testing.osdb",
+    "--cov=diracx.db", "--cov-report=term-missing",
+    "-pdiracx.testing", "-pdiracx.testing.osdb",
     "--import-mode=importlib",
 ]
 asyncio_mode = "auto"
