--- a/diracx-core/pyproject.toml
+++ b/diracx-core/pyproject.toml
@@ -14,11 +14,11 @@ classifiers = [
 ]
 dependencies = [
     "aiobotocore>=2.15",
-    "authlib",
     "botocore>=1.35",
     "cachetools",
     "email_validator",
     "gitpython",
+    "joserfc",
     "pydantic >=2.10",
     "pydantic-settings",
     "pyyaml",
