--- a/diracx-testing/pyproject.toml
+++ b/diracx-testing/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pytest-cov",
     "pytest-xdist",
     "httpx",
+    "joserfc",
     "uuid-utils",
 ]
 dynamic = ["version"]
