feat: modify relative paths in --skip

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,5 +50,5 @@ repos:
     rev: v2.4.1
     hooks:
     - id: codespell
-      args: ["--skip=./diracx-client/src/diracx/client/_generated/*, ./diracx-[a-z]*/tests/*, ./diracx-testing/*, build/*, ./extensions/gubbins/gubbins-client/src/gubbins/client/_generated/*, ./extensions/gubbins/gubbins-*/tests/*",
+      args: ["--skip=diracx-client/src/diracx/client/_generated/*, diracx-[a-z]*/tests/*, diracx-testing/*, build/*, extensions/gubbins/gubbins-client/src/gubbins/client/_generated/*, extensions/gubbins/gubbins-*/tests/*",
       "--ignore-words-list=CheckIn", "-w"]
