[pre-commit.ci] auto fixes from pre-commit.com hooks
for more information, see https://pre-commit.ci

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,10 +38,10 @@ repos:
         exclude: ^(diracx-client/src/diracx/client/_generated|diracx-[a-z]+/tests/|diracx-testing/|build|extensions/gubbins/gubbins-client/src/gubbins/client/_generated)
 
   - repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.22  # Use the ref you want to point at
+    rev: 0.7.22
     hooks:
     - id: mdformat
-      # Optionally add plugins
+      args: ["--number"]
       additional_dependencies:
       - mdformat-gfm
       - mdformat-black
