--- a/diracx-db/pyproject.toml
+++ b/diracx-db/pyproject.toml
@@ -37,16 +37,18 @@ TaskQueueDB = "diracx.db.sql:TaskQueueDB"
 [project.entry-points."diracx.dbs.os"]
 JobParametersDB = "diracx.db.os:JobParametersDB"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-
 [build-system]
-requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
 root = ".."
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/diracx"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
