--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -55,15 +55,18 @@ SandboxAccessPolicy = "diracx.routers.jobs.access_policies:SandboxAccessPolicy"
 [project.entry-points."diracx.min_client_version"]
 diracx = "diracx.routers:DIRACX_MIN_CLIENT_VERSION"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-
 [build-system]
-requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
 root = ".."
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/diracx"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
