--- a/diracx-testing/pyproject.toml
+++ b/diracx-testing/pyproject.toml
@@ -27,12 +27,15 @@ testing = [
     "diracx-testing",
 ]
 
-[tool.setuptools.packages.find]
-where = ["src"]
-
 [build-system]
-requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
 root = ".."
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/diracx"]
