--- a/extensions/gubbins/gubbins-core/pyproject.toml
+++ b/extensions/gubbins/gubbins-core/pyproject.toml
@@ -28,15 +28,18 @@ properties_module = "gubbins.core.properties"
 config = "gubbins.core.config.schema:Config"
 extension = "gubbins"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-
 [build-system]
-requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
 root = "../../.."
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/gubbins"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
