--- a/extensions/gubbins/gubbins-routers/pyproject.toml
+++ b/extensions/gubbins/gubbins-routers/pyproject.toml
@@ -39,16 +39,18 @@ lollygag = "gubbins.routers.lollygag:router"
 [project.entry-points."diracx.access_policies"]
 LollygagAccessPolicy = "gubbins.routers.lollygag.access_policy:LollygagAccessPolicy"
 
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
 [build-system]
-requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
 root = "../../.."
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/gubbins"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
