--- a/extensions/gubbins/gubbins-testing/pyproject.toml
+++ b/extensions/gubbins/gubbins-testing/pyproject.toml
@@ -17,13 +17,15 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
 [build-system]
-requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
 root = "../../.."
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/gubbins"]
