--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,15 @@ dynamic = ["version"]
 [project.optional-dependencies]
 testing = ["diracx-testing"]
 
-[tool.setuptools]
-packages = []
-
 [build-system]
-requires = ["setuptools>=61", "setuptools_scm>=8"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.build.targets.wheel]
+bypass-selection = true
 
 [tool.ruff]
 line-length = 120
