--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,7 +122,6 @@ ignore-words-list = [
 
 [tool.mypy]
 warn_unreachable = true
-enable_error_code = ["redundant-expr", "truthy-bool"]
 files = [
     "diracx-api/src/**/*.py",
     "diracx-cli/src/**/*.py",
@@ -146,7 +145,7 @@ allow_redefinition = true
 explicit_package_bases = true
 # disallow_untyped_defs = true
 # strict = true
-enable_error_code = ["import", "attr-defined"]
+enable_error_code = ["import", "attr-defined", "redundant-expr", "truthy-bool"]
 
 [[tool.mypy.overrides]]
 module = 'DIRAC.*'
